migrated necklaces from eternalstorm

--- a/TemporalAmulets/assets/temporalamulets/lang/en.json
+++ b/TemporalAmulets/assets/temporalamulets/lang/en.json
@@ -1,3 +1,4 @@
 {
-    "hello": "hello world!"
+    "temporalamulets:item-clothes-neck-amulet-temporal-sealed-tinbronze": "Tin bronze sealed temporal amulet",
+    "temporalamulets:item-clothes-neck-amulet-temporal-sealed-electrum": "Electrum sealed temporal amulet"
 }
